@@ -50,7 +50,22 @@
 			<artifactId>selenium-java</artifactId>
 			<version>2.25.0</version>
 		</dependency>
+		 <dependency>
+            <groupId>com.opera</groupId>
+            <artifactId>operadriver</artifactId>
+            <version>0.18</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.seleniumhq.selenium</groupId>
+                    <artifactId>selenium-remote-driver</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
 	</dependencies>
+	<properties>
+	<selenium.test.webbrowser>firefox</selenium.test.webbrowser>
+	<selenium.test.jvmargs><![CDATA[-Dwebbrowser=${selenium.test.webbrowser}]]></selenium.test.jvmargs>
+	</properties>
 	<build>
 		<plugins>
 			<plugin>
@@ -92,6 +107,7 @@
 						</property>
 						[...]
 					</systemProperties>
+					<argLine> -Xmx128m -Xms128m -XX:MaxPermSize=196m ${selenium.test.jvmargs}</argLine>
 
 					<!-- <testFailureIgnore>true</testFailureIgnore> -->
 					<!-- <argLine>-javaagent:${jacoco.agent.path}=destfile=${jacoco.file.path}</argLine> -->
